# umbrella

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/rangefinder2022/rangefinder2022/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AAudioEngine.cpp  AAudioEngine.h  CMakeLists.txt  DataModel.cpp  DataModel.h  DataTypeUtils.cpp  DataTypeUtils.h  FileWriter.cpp  FileWriter.h  Oscillator.cpp  Oscillator.h  PCM16data.cpp  PCM16data.h  PCMrecorder.cpp  PCMrecorder.h  WavWriter.cpp  WavWriter.h  native-lib.cpp
app/src/main/java/com/RangeFinder2022/: AudioGainHandle.java  BubbleEngine.java  BubbleMetrics.java  DistCSV.java  DistCSVhandle.java  DistDialog.java  FreqView.java  LIDARsensor.java  MainActivity.java  RecordEngine.java  SettinDialogFrag.java  UtilDist2freq.java  UtilsFile.java  UtilsWeird.java
app/src/main/res/drawable/: bubble.xml  bubble_capsule.xml  bubble_hole.xml  ic_svg_sawtooth.xml  ic_svg_sine.xml  ic_svg_square.xml  ic_svg_triangle.xml  recorder_blue.xml  recorder_red.xml
app/src/main/res/layout/: activity_main.xml  audio_gain.xml  dialog_setting.xml  dist_compact.xml  freq_compact.xml  freq_progress.xml  level.xml  levelswitch.xml  lidar.xml  recorder_small.xml  waveform.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: device_filter.xml
app/src/test/java/com/rangefinder2022/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
